chore(.env.example): update PUBLIC_STORAGE_ENDPOINT to use HTTP instead of HTTPS for Minio S3
fix(components/shared/SelectWithLabel.tsx): replace react-daisyui Select component with native select element

feat(components/transcripts/CreateTranscript.tsx): add file upload functionality and handleFileUpload function to handle file uploads and return file URL

fix(docker-compose.yml): use environment variables for MINIO_ROOT_USER and MINIO_ROOT_PASSWORD

refactor(lib/permissions.ts): update tasksType values to match the name property

feat(lib/storage/minio.ts): add createFile function to handle file uploads to Minio S3 and return file URL

feat(package.json): add minio package as a dependency

style(styles/globals.css): add custom styles for audio player controls

refactor(types/base.ts): remove unused properties from NewTaskInput interface and update MAX_FILE_SIZE to 10MB

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,3 +56,16 @@ a {
 .btn-md {
   @apply min-h-8 h-10;
 }
+
+audio::-webkit-media-controls-panel {
+  background-color: #4406cb;
+}
+
+audio::-webkit-media-controls-play-button {
+  background-color: #b1d4e0;
+  border-radius: 50%;
+}
+
+audio::-webkit-media-controls-play-button:hover {
+  background-color: rgba(177, 212, 224, 0.7);
+}
